syntax = "proto3";

import "JinJvLi.proto";
package JinJvLi.Lobby;

message PB_GameRoom
{
    string GameName= 1;
    uint32 ID=2;
    string Tip=3;
    PB_IPAddress Address=4;
    PB_UserInfo Host=5;
    repeated PB_FileTransfer Files = 6;
    float Version=7;
}

message PB_FileTransfer
{
    string FileName = 1;
    int64 FileSize = 2;
    PB_IPAddress Address=3;
    string Type = 4;
}