syntax = "proto3";

message SInt32 {
  sint32 sint32_field1 = 1;
  Test2 b = 2;
}

message Test2 {
  sint32 sint32_field2 = 1;
}

